--- a/resources/css/info.css
+++ b/resources/css/info.css
@@ -22,32 +22,69 @@ body {
   white-space: nowrap;
   direction: ltr;
 }
+header {
+    position: fixed;
+    width: 100%;
+    height: 5vh;
+    top: 0px;
+    margin: 0px;
+    background-color: rgba(0,0,0,0.5);
+    padding: 10px 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; /* Center align vertically*/
+    transition: top 0.3s; /* Adding transition for smooth hide/show effect */
+    z-index: 2;
+}
 
 .welcome {
-    background-image: url('https://firebasestorage.googleapis.com/v0/b/sfs-bp-store.appspot.com/o/static%2Flogo%2Fstarship-superheavy-olm.jpeg?alt=media&token=bd82be51-9841-4192-a217-b36788856ba3');
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/sflight-x.appspot.com/o/static%2Fimg%2Fmaya-4-on-pad.jpg?alt=media&token=6e7c8a69-a25b-4110-a20b-10b1d63d8c88');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
     position: relative;
-    width: calc(100vw - 20px); /* 100vw - 20px for left and right padding */
-    height: calc(90vh - 20px); /* 100vh - 20px for top and bottom padding */
-    padding: 10px; /* 10px padding on all sides */
+    width: calc(95vw-50px); /* 100vw - 20px for left and right padding */
+    height: 100vh; /* 100vh - 20px for top and bottom padding */
+    padding: 25px;
 }
 
 .welcome h1 {
     margin: 10px; /* Remove default margin */
     text-align: left; /* Align text to the left */
     position: absolute;
-    bottom: 100px; /* Adjust as needed */
-    left: 10px; /* Adjust left position */
+    bottom: 150px; /* Adjust as needed */
 }
 
-.welcome h5 {
-    margin: 10px; /* Remove default margin */
-    text-align: left; /* Align text to the left */
+.welcome p { 
+    text-align: left; 
     position: absolute;
-    bottom: 50px; /* Adjust as needed */
-    left: 10px; /* Adjust left position */
-    color:#a0a0a0
+    bottom: 75px;
+    color:#d3d3d3;
+}
+
+.sat-data {
+    padding-top: 10vh;
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/sflight-x.appspot.com/o/static%2Fimg%2Fomegasat-2.jpg?alt=media&token=b3d70f23-3889-4c5d-9d9c-c3b2e995b9ba');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    padding: 50px 30px;
+    height: 100vh;
+    text-align: center;
+}
+
+.sat-data h4, .sat-data h2 {
+    color: #dddddd;
+}
+
+.sat-data-container {
+    margin-top: 75px;
+    display: grid;
+}
+
+.sat-data-child p {
+    margin: 20px 0px;
+    font-size: 250%;
 }
 
 .launches, .blueprint {
@@ -55,28 +92,11 @@ body {
     text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6 {
     color: white;
 }
 
-p {
-    color: white;
-}
 
-header {
-    position: fixed;
-    top: 0px;
-    margin: 0px;
-    width: 100%;
-    background-color: rgba(0,0,0,0.5);
-    padding: 8px;
-    height: 5vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center; /* Center align vertically*/
-    transition: top 0.3s; /* Adding transition for smooth hide/show effect */
-    z-index: 2;
-}
 
 .header-hide {
     top: -100px; /* Moves the header off-screen when scrolled down */
@@ -143,8 +163,7 @@ nav a {
 }
 
 .grid-container {
-    
-    margin: 5px;
+    margin: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 40px; /* Adjust spacing between grid items */
@@ -153,7 +172,8 @@ nav a {
 .grid-item {
     border: 1px solid #ccc; /* Optional border for visualization */
     border-radius: 10px;
-    padding: 20px;
+    padding: 50px;
+    margin: 10px 0px;
 }
 
 .see-more {
@@ -250,4 +270,107 @@ footer a:hover {
 
 .button-container button:hover, .details-button:hover {
     background-color: #2980b9; /* You can change the hover color */
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+    .grid-container {
+        margin: 50px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .welcome {
+        margin: 0px;
+    }
+
+    .welcome p {
+        padding: 0px 0px;
+        width: 90%;
+    }
+    
+    .sat-data {
+        margin: 0px;
+        padding: 25px;
+    }
+
+    .sat-data-container {
+        margin: 100px 0px 20px 0px;
+    }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    h1 {
+        font-size: 6vw;
+    }
+    h2 {
+        font-size: 5.25vw;
+    }
+    h3 {
+        font-size: 4vw;
+    }
+    h4 {
+        font-size: 3.75vw;
+    }
+    h5 {
+        font-size: 2.25vw;
+    }
+    h6 {
+        font-size: 1.5vw;
+    }
+    p {
+        font-size: 125%;
+    }
+    .sat-data-container {
+        margin-top: 75px;
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+    }
+    .sat-data-child {
+        margin-top: 50px;
+    }
+    
+    .sat-data-child p {
+        margin: 20px 0px;
+        font-size: 400%;
+    }
+    .sat-data-container h4 {
+        margin: 40px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .grid-container {
+        display: grid;
+        max-width: 100vw;
+        grid-template-columns: repeat(2, 2fr);
+    }
+}
+/* 4k devices (4k screens, 2400px and up) */
+@media only screen and (min-width: 2400px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+    }
 }
